# finn_ad

./: pyproject.toml
notebook/: Rent market analyse.ipynb
src/: craw_finn_leie_ad.py
