[tool.poetry]
name = "finn_ad"
version = "0.1.0"
description = ""
authors = ["Min Shi <min.shi@optimeering.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
selenium = "^3.141.0"
Scrapy = "^2.5.0"
pandas = "^1.3.5"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
black = "^21.6b0"
pytest = "^6.2.4"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"